--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,19 @@
 body {
-    background-color: rgb(224, 224, 224);
+    background-color: rgb(255, 255, 255);
+}
+header {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-align: center;
 }
 h1 {
     background-color: rgb(62, 194, 84);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-align: center;
 }
 h2 {
     background-color: rgb(62, 194, 84);
+    text-align: center;
+
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 p {
@@ -18,14 +25,10 @@ li {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 footer {
-    background-color: rgb(189, 189, 189);
+    background-color: rgb(62, 194, 84);
+    text-align: center;
 }
 
-#floatText {
-    float: left;
-}
-
-img {
-    float: right;
-    margin: 0 0 0 15px;
+.whatever {
+    margin-left: 20px;
 }
